--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -4,36 +4,24 @@ description: Set up Chalk in your notebook of choice.
 published: true
 ---
 
-## Installation
+In this section we walk through authentication: how to connect to Chalk from a
+notebook.
 
-### Dependencies
+To authenticate, we recommend generating a client ID and secret key pair.
 
-Install Chalk in your notebook environment by running the following command in a cell:
+This can be done in the Chalk Dashboard. Go to **Settings > Access Tokens**,
+and generate a client ID/secret key pair by clicking on **New Token** and selecting
+all necessary permissions—(typically, online query, offline query, and preview
+deployment permissions should be sufficient).
 
-```python notebook.ipynb
-!pip install chalkpy[all]
-```
-
-### Authentication
-
-To use Chalk in a notebook, we will need to generate a client ID and secret key pair.
-
-In the Chalk Dashboard, under **Settings > Access Tokens**,
-generate a client ID and secret key pair by clicking on **New Token** and selecting all necessary permissions.
-
-We will need the client ID and client secret we generated to initialize
-a Chalk client in our notebook.
-
----
-
-## Environment Setup
-
-You can use the `ChalkClient` from any Jupyter notebook environment.
+You can then use your access credentials to connect Chalk to any Jupyter notebook
+environment. In the following section, we show the process of authenticating
+to a local notebook. We then show the process for [Hex], [Deepnote], and [Vertex].
 
 ### Local
 
 If you are working with a local notebook, Chalk will pick up your credentials
-generated from running `chalkpy login` in your terminal.
+generated from running `chalk login` in your terminal.
 
 All you need to do is initialize the client:
 
@@ -41,23 +29,6 @@ All you need to do is initialize the client:
 from chalk.client import ChalkClient
 
 client = ChalkClient()
-```
-
-### Deepnote
-
-On Deepnote, you can set [environment variables](https://deepnote.com/docs/environment-variables) by going to the
-integrations tab and clicking on the "Environment Variables" button.
-
-![Deepnote Environment Variables](/img/DeepnoteEnvVar.png)
-
-Set the `CHALK_CLIENT_ID` and `CHALK_CLIENT_SECRET` variables to the values you generated in the previous step.
-You can then initialize Chalk by running the following code in a cell:
-
-```python notebook.ipynb
-import os
-from chalk.client import ChalkClient
-
-client = ChalkClient(branch="new-feature")
 ```
 
 ### Hex
@@ -70,18 +41,38 @@ Select `Python 3.10` as the image under **Environment > Compute Profile**.
 
 ![Hex Python Image](/img/HexPythonImage.png)
 
-The Chalk client can then be initialized referencing the variables directly
+The Chalk client can then be initialized referencing the variables directly.
 
 ```python notebook.ipynb
-from chalk.client import ChalkClient
+from chalk import ChalkClient
 
-client = ChalkClient(branch="new-feature")
+client = ChalkClient(
+  client_id=CHALK_CLIENT_ID,
+  client_secret=CHALK_CLIENT_SECRET,
+  branch='notebook',
+)
+```
+### Deepnote
+
+On Deepnote, you can set [environment variables](https://deepnote.com/docs/environment-variables) by going to the
+integrations tab and clicking on the "Environment Variables" button.
+
+![Deepnote Environment Variables](/img/DeepnoteEnvVar.png)
+
+Set the `CHALK_CLIENT_ID` and `CHALK_CLIENT_SECRET` variables to the values you generated in the previous step.
+You can then initialize Chalk by running the following code in a cell:
+
+```python notebook.ipynb
+import os
+from chalk import ChalkClient
+
+client = ChalkClient()
 ```
 
 ### Vertex & Google Colab Enterprise
 
-On Google Colab Enterprise, you can set up secrets using the Google Secret Manager.
-Add secrets named `chalk-client-id` and `chalk-client-secret` to Google Secret Manager
+On Google Colab Enterprise, you can set up secrets with the Google Secret Manager.
+Add two secrets named `chalk-client-id` and `chalk-client-secret` to Google Secret Manager
 that correspond to your Chalk client id and client secret.
 
 ![Google Colab Secret](/img/ColabSecret.png)
@@ -135,20 +126,4 @@ chalk_client = ChalkClient(
     client_secret=CHALK_CLIENT_SECRET,
     branch="new-feature"
 )
-```
-
-## Creating a branch
-
-To start using Chalk in a notebook, we will need to create a [branch deployment](/docs/branches).
-Branch deployments are isolated environments that can be used to test features and resolvers before deploying them to production.
-
-Working in a branch makes it seamless to iterate on features and resolvers in notebooks.
-Any time we execute a cell in our notebook with feature or resolver definitions,
-Chalk will automatically update our branch deployment with the latest changes.
-
-Once you've got your client setup, you can create a branch calling [`create_branch`](/api-docs#ChalkClient.create_branch).
-Setting `switch=True` will point your client to the newly created branch.
-
-```python notebook.ipynb
-client.create_branch("my-branch", switch=True)
 ```
