--- a/notebook-development.mdx
+++ b/notebook-development.mdx
@@ -34,7 +34,7 @@ this process for a few different notebook environments in our [notebook setup do
 
 ## Verifying the Setup
 
-To verify that everything is properly set up, you can run the following code in a cell
+To verify that everything is properly set up, you can run the following code in a cell:
 
 ```python notebook.ipynb
 from chalk.client import ChalkClient
