--- a/athena.mdx
+++ b/athena.mdx
@@ -21,7 +21,7 @@ to the provided staging directory in S3: these intermediate results will appear 
 
 ## Single Integration
 
-Add your Athena data source in a Python file and give it a `name`. This line is required for all Athen
+Add your Athena data source in a Python file and give it a `name`. This line is required for all Athena
 integrations. In this file, we'll also define a `User` feature class with a `transaction_volume` feature which will be
 resolved with Athena.
 
