--- a/athena.mdx
+++ b/athena.mdx
@@ -10,7 +10,7 @@ import { getNamedIntegrationText } from "@/components/NamedIntegration";
 ---
 
 Chalk supports [AWS Athena](https://aws.amazon.com/athena/) as a [SQL source](/docs/sql). This allows users to load data from
-their AWS Glue and other AWS data sources (Hive, DocumentDB, Iceberg, etc.) directly into Chalk features.
+AWS Glue and other AWS data sources (Hive, DocumentDB, Iceberg, etc.) directly into Chalk features.
 
 ## Adding Athena
 
